--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         and help guide long-term environmental management.
     </p>
     <p>
-        The SPH Health Data Fest will focus cyanobacteria blooms. Cyanobacteria blooms—often referred 
+        The SPH Health Data Fest will focus on cyanobacteria blooms. Cyanobacteria blooms—often referred 
         to as blue-green algae blooms—occur in nutrient-rich waters and are increasingly common 
         during warm periods. These blooms can disrupt aquatic ecosystems by blocking sunlight and 
         depleting oxygen, and some produce toxins that pose risks to both human and animal health. 
