--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         and present their findings to faculty judges.
     </p>
     <p>
-        This event is sponsored by the Center for Biostatistics and Health Data Science, the Department of Biostatistics, and the Data Science Institute at Brown University.
+        This inaugural event is sponsored by the Center for Biostatistics and Health Data Science, the Department of Biostatistics, and the Data Science Institute at Brown University.
         We would also like to thank Sara Horvet and Molly Welsh from the <a href="https://www.stormwaterinnovation.org/about">Stormwater Innovation Center</a> for sharing their time and expertise. 
     </p>
     <p>
